crates/analyzer/tests/snapshots/errors__assert_reason_not_string.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `assert` reason must be a string
  ┌─ [snippet]:3:16
  │
3 │   assert true, 1
  │                ^ this has type `u256`; expected a string


